# lbadta

./: AUTHORS  CMakeLists.txt  README  errmem.c  errmem.h  hqr.c  hqr.h  ioconv.c  ioconv.h  lbadta.h
swig/: lbadta.i
tests/: .cproject  .project  test_lbadta.c
